--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "type": "git",
     "url": "git://git@github.com:MSGTech/Lambda-Node-Boilerplate.git"
   },
-  "keywords": ["lambda", "serverless"],
+  "keywords": [
+    "lambda",
+    "serverless"
+  ],
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.2",
@@ -25,21 +28,13 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.2.0",
     "istanbul": "^0.4.5",
-    "karma": "^1.6.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-istanbul-reporter": "0.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "webpack": "^1.12.11",
-    "webpack-closure-compiler": "^2.1.4"
+    "webpack-closure-compiler": "^2.1.4",
+    "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {},
   "main": "index.js",
@@ -47,6 +42,6 @@
     "build": "webpack --progress --colors",
     "lint": "eslint src/",
     "setup": "npm i serverless aws-sdk -g & npm i",
-    "test": "karma start"
+    "test": "mocha-webpack --webpack-config webpack.config.test.js \"src/**/*.test.js\""
   }
 }
