Extend deploy scripts
Add separate dev and prod deploy scripts.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   "dependencies": {},
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --colors",
+    "build": "concurrently \"npm run lint\" \"npm test\" \"webpack --progress --colors\"",
+    "deploy:dev": "cd dist && sls deploy --stage dev --region us-east-1 -v",
+    "deploy:prod": "cd dist && sls deploy --stage prod --region us-east-1 -v",
     "lint": "eslint src/",
     "setup": "npm i serverless aws-sdk -g & npm i",
     "test": "mocha-webpack --webpack-config webpack.config.test.js \"src/**/*.test.js\""
