--- a/serverless.yml
+++ b/serverless.yml
@@ -3,8 +3,8 @@ service: lambda-node-boilerplate # NOTE: update this with your Lambda service na
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: dev
-  region: us-east-1
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-1'}
 
 functions:
   handler:
